Fix tab overflow on mobile

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -153,45 +153,6 @@ select.input {
   color: inherit;
 }
 
-.close-button {
-  cursor: pointer;
-  background: rgba($light-background, 0.5);
-  border-radius: 100%;
-  padding: 0.25em 0.5em;
-
-  &:hover {
-    background: rgba($dark-background, 0.5);
-  }
-
-  &:before {
-    content: 'x';
-    font-family: monospace;
-  }
-}
-
-.tabs {
-  border-bottom: 1px solid $dark-background;
-}
-
-.tab {
-  margin: 0 0.25em -1px 0.25em;
-
-  &:hover {
-    background: $light-background;
-  }
-}
-
-.tab a {
-  padding: 0.5em 1em;
-  border: 1px solid $dark-background;
-  border-radius: 0.25em 0.25em 0 0;
-  display: block;
-}
-
-.tab--active a {
-  border-bottom: 1px solid $background;
-}
-
 .flex {
   display: flex;
   flex-wrap: wrap;
@@ -287,6 +248,11 @@ a.text-background:hover, button.text-background:hover {
   text-align: center;
 }
 
+.horizontal-scroll {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .separated-list li {
   border-bottom: 1px solid $dark-background;
   padding: 1em 0;
@@ -299,4 +265,44 @@ a.text-background:hover, button.text-background:hover {
 .turbolinks-progress-bar {
   height: 5px;
   background-color: $success;
+}
+
+.close-button {
+  cursor: pointer;
+  background: rgba($light-background, 0.5);
+  border-radius: 100%;
+  padding: 0.25em 0.5em;
+
+  &:hover {
+    background: rgba($dark-background, 0.5);
+  }
+
+  &:before {
+    content: 'x';
+    font-family: monospace;
+  }
+}
+
+.tabs {
+  border-bottom: 1px solid $dark-background;
+  flex-wrap: nowrap;
+}
+
+.tab {
+  margin: 0 0.25em -1px 0.25em;
+
+  &:hover {
+    background: $light-background;
+  }
+}
+
+.tab a {
+  padding: 0.5em 1em;
+  border: 1px solid $dark-background;
+  border-radius: 0.25em 0.25em 0 0;
+  display: block;
+}
+
+.tab--active a {
+  border-bottom: 1px solid $background;
 }
